@@ -25,6 +25,8 @@ TODO: add bell event (or generic event to act on such controls).
         - do not process focus events caused by grabs
           (patch by Mikachu).
         - better option handling, support more than 30 options (exg).
+        - add urgentOnBell resource to set the urgency hint
+          (patch by Philip Paeps).
 
 8.2  Sat Feb 17 21:35:28 CET 2007
 	- fix make depend in src/, reported by exg.
